apps/postiz/deployment.yaml
iiapiVersion: apps/v1
kind: Deployment

metadata:
  name: postiz
  namespace: postiz

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postiz

  template:
    metadata:
      labels:
        app: postiz

    spec:
      containers:
      - name: postiz

        image: ghcr.io/gitroomhq/postiz-app:latest

        ports:
        - containerPort: 5000

        resources:
          requests:
            cpu: 200m
            memory: 512Mi

          limits:
            cpu: 1000m
            memory: 2Gi
