apps/postiz/redis-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: redis-service
  namespace: postiz

spec:
  selector:
    app: redis

  ports:
  - port: 6379
    targetPort: 6379

  type: ClusterIP
