apps/postiz/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postiz-service
  namespace: postiz

spec:
  selector:
    app: postiz

  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30080

  type: NodePort
