apps/postiz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: postiz-ingress
  namespace: postiz

spec:
  ingressClassName: nginx

  rules:
  - host: postiz.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postiz-service
            port:
              number: 80
